added code to HTML file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,39 @@
     </header>
     <main>
       <!-- Student code goes here -->
+      <section class="card" id="html-section">
+<h2>HTML</h2>
+<ul>
+  <li>The head element contains information about the webpage.</li>
+  <li>The body element represents the visible content shown to the user</li>
+  <li>An element is a type of content on a webpage including: text elements, image elements, header elemments, and list elements.</li>
+  <li>Element types used to divide and describe a webpage include: meta-related, content division, and semantic.</li>
+  <li>The style element defines the CSS styles associated with a website.</li>
+  <li>The base element defines the base URL for a webpage.</li>
+  <li>the link element connects an external resource to the HTML document.</li>
+  <li>The script element embeds client-side scripts in the HTML document.</li>
+  <li>the div element creates a division in the page, or span to create an inline division.</li>
+  <li>The p element represents a paragraph or block of text.</li>
+  <li>The ul, ol, and li, elements represent unordered lists, ordered lists, and list items.</li>
+  <li>The img elements contains information about images that are displayed on the webpage. The src attribute is used to define the location of the image.</li>
+  <li>The br element creates a line of empty space, or a line break between two blocks of content.</li>
+  <li>The a element (stands for anchor) creates a link to the same webpage or other webpages. The href attribute points to the URL for the link.</li>
+  <li>The footer element appears at the bottom of the page and usually contains the author, copyright, contact, sitemap, and navigation.</li>
+  <li>The h element creates a header which ranges in size from 1-6.</li>
+</ul>
+      </section>
+   
+      <section class="card" id="css-section">
+   
+      </section>
+   
+      <section class="card" id="git-section">
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+   
+      </section>
     </main>
 
     <footer>
