--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -13,7 +14,6 @@
     </header>
     <main>
       <!-- Student code goes here -->
-<<<<<<< HEAD
       <section class="card" id="html-section">
 <h2>HTML</h2>
 <ul>
@@ -37,7 +37,14 @@
       </section>
    
       <section class="card" id="css-section">
-   
+   <h2>CSS</h2>
+   <ul>
+    <li>A margin indicates how much space we want around the outside of an element.</li>
+    <li>A padding indicates how much space we want around the content inside an element.</li>
+    <li>The internal CSS style sheet contains CSS rules for the webpage in the head section of the HTML file. These rules only apply to that page, and you can configure CSS classes and IDs, which are used to identify elements, to style multipe elements in the page code.</li>
+    <li>An external CSS style sheet contains CSS rules for the webpage in a separate file to make design changes easier.</li>
+    <li>CSS styles will not be added until the external style sheet is linked to the webpage in the head tag. This is done through the "link" element. The rel attribute will also be used to specify the relationship between the current document and the linked document resource. The href attribute will specify the location (URL) of the external resource.</li>
+   </ul>
       </section>
    
       <section class="card" id="git-section">
@@ -47,16 +54,10 @@
       <section class="card" id="javascript-section">
    
       </section>
-=======
->>>>>>> 1d86ca3bab9f47110c9c905de23eca5e9c2f7790
     </main>
 
     <footer>
       <p>I can code!</p>
     </footer>
   </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> 1d86ca3bab9f47110c9c905de23eca5e9c2f7790
