--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
       </section>
    
       <section class="card" id="javascript-section">
+        <ul>
+          <li>A variable is a name container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>A function is a set of instructions that tell the computer how to perform a certain task</li>
+          <li>A function's name is followed by parentheses ().</li>
+          <li>To declare a function, we use the function keyword and then give the function a unique name followed by paretheses. Curly brackets {} that contain the code for the task we want performed will then follow the parentheses.</li>
+          <li>Data Types: Strings = text, integer = numbers, boolean = true/false, object = everything in JavaScript is an object and can be stored in a variable</li>
+          <li>Data Structure: Array = a structure that allows you to store multiple values in a single reference</li>
+          <li>Check these links regarding more info on <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">basics</a> and <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures">data types</a></li>
+        </ul>
    
       </section>
     </main>
