--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
       </section>
    
       <section class="card" id="git-section">
+        <h2>Git</h2>
    
       </section>
    
       <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
         <ul>
           <li>A variable is a name container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
