updated HTML document for GIT notes section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
    
       <section class="card" id="git-section">
         <h2>Git</h2>
+        <ul>
+          <li>Git is a version control system that lets you manage and keep track of each version of your project.</li>
+          <li>Git is accessed through the command line.</li>
+          <li>Git commands will begin with "git" and are used to save and track versions of your code. Tehse commands can be used to initiate (or create) a repo, add our code to the repo, and view the different versions of our code which are each stored in a unique commit.</li>
+          <li>GitHub is a cloud-based hosting service that allows you to keep track of your projects inside repositories that are stored remotely. GitHub not only stores code, but also allows us to easily collaborate with others.</li>
+          <li>Visit this <a href="https://education.github.com/git-cheat-sheet-education.pdf">link</a> for a reference of git commands.</li>
+          <li></li>
+        </ul>
    
       </section>
    
